k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/service-1
            pathType: Prefix
            backend:
              service:
                name: service-service-1-app
                port:
                  number: 3001
          - path: /api/service-2
            pathType: Prefix
            backend:
              service:
                name: service-service-2-app
                port:
                  number: 3002
          - path: /api/service-3
            pathType: Prefix
            backend:
              service:
                name: service-service-3-app
                port:
                  number: 3003
